# gbs

./: .clippy.toml  .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  LICENSE.txt  Makefile  README.md  gbs.yaml.example  gummy-search.yaml.example
docs/: API.md  ARCHITECTURE.md  CODE_COVERAGE.md  ES6_COMPATIBILITY_ROADMAP.md  ES7_COMPATIBILITY_ROADMAP.md  ES8_COMPATIBILITY_ROADMAP.md  ES9_COMPATIBILITY_ROADMAP.md  PHASE1_PROGRESS.md  PHASE1_REFACTORING_PLAN.md  REFACTORING_ANALYSIS.md  ROUTES.md  TODO.md  USAGE_EXAMPLES.md  elasticsearch-api-requirements.md  storage-options.md
example_laravel_app/: DATA_SOURCES.md  DOCKER.md  Dockerfile  QUICKSTART.md  README.md  WIKIPEDIA_SEEDING.md  composer.json  docker-compose.yml
example_laravel_app/app/Console/: Kernel.php
example_laravel_app/app/Models/: Content.php  Dictionary.php  Entity.php
example_laravel_app/config/: app.php  scout.php
example_laravel_app/database/factories/: DictionaryFactory.php  EntityFactory.php  FileFactory.php
example_laravel_app/database/migrations/: 2024_01_01_000001_create_contents_table.php  2024_01_01_000002_create_entities_table.php
example_laravel_app/database/seeders/: DatabaseSeeder.php
example_laravel_app/routes/: console.php  web.php
example_laravel_app/tests/Feature/: SearchTest.php
examples/: basic_usage.rs
gummy_wiki/: .dockerignore  .gitignore  DATA_SOURCES.md  QUICKSTART.md  README.md  composer.json  docker-entrypoint.sh
gummy_wiki/app/Models/: File.php
gummy_wiki/app/Providers/: ScoutServiceProvider.php
gummy_wiki/app/Scout/: ElasticsearchEngine.php
gummy_wiki/bootstrap/cache/: packages.php  services.php
gummy_wiki/docker/nginx/: default.conf
src/: bulk.rs  bulk_ops.rs  client.rs  config.rs  document.rs  error.rs  index.rs  lib.rs  main.rs  models.rs  search.rs  server.rs  storage.rs  storage_backend.rs
src/server/: mod.rs  routes.rs
src/storage/: document_ops.rs  index.rs  index_ops.rs  mod.rs  persistence.rs  search_impl.rs  stats.rs  storage.rs
static/: app.js  favicon-links.html  index.html  site.webmanifest
tests/: bulk_ops.rs  config.rs  error_handling.rs  integration.rs  integration_http.rs  persistence_test.rs  storage.rs  storage_edge_cases.rs
(+29 files in other folders)
