[package]
name = "gummy-search"
version = "0.1.0"
edition = "2021"
authors = ["Azat Murtazin <murtazin.azat@gmail.com>"]
description = "Elasticsearch-compatible search engine written in Rust"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
