[package]
name = "gummy-search"
version = "0.1.0"
edition = "2021"
authors = ["Azat Murtazin <murtazin.azat@gmail.com>"]
description = "Elasticsearch-compatible search engine written in Rust"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
